--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -2610,7 +2610,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4uC-7k-2Tb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5063" y="90"/>
+            <point key="canvasLocation" x="5030" y="89"/>
         </scene>
         <!--Early LeaversVC-->
         <scene sceneID="VDP-6j-1Hw">
@@ -2970,7 +2970,7 @@
                                 <rect key="frame" x="0.0" y="-4" width="375" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leaves" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pn-US-SU2">
-                                        <rect key="frame" x="63" y="20" width="161" height="24"/>
+                                        <rect key="frame" x="63" y="30" width="161" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="X0J-YQ-chA"/>
                                             <constraint firstAttribute="width" constant="161" id="gnC-jY-yhB"/>
@@ -2980,7 +2980,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxt-nJ-V6f">
-                                        <rect key="frame" x="17" y="21" width="14" height="23"/>
+                                        <rect key="frame" x="17" y="31" width="14" height="23"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="23" id="7fc-ov-PYh"/>
                                             <constraint firstAttribute="width" constant="14" id="8AU-3f-EqP"/>
@@ -2995,10 +2995,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="1h0-4e-s6D"/>
                                     <constraint firstItem="fxt-nJ-V6f" firstAttribute="leading" secondItem="5Tg-qv-ckW" secondAttribute="leading" constant="17" id="VQl-Nz-Zxq"/>
-                                    <constraint firstAttribute="bottom" secondItem="0pn-US-SU2" secondAttribute="bottom" constant="16" id="XjV-BK-eq8"/>
-                                    <constraint firstAttribute="bottom" secondItem="fxt-nJ-V6f" secondAttribute="bottom" constant="16" id="aQD-nM-oT4"/>
-                                    <constraint firstItem="0pn-US-SU2" firstAttribute="top" secondItem="5Tg-qv-ckW" secondAttribute="top" constant="20" id="p32-YG-quF"/>
-                                    <constraint firstItem="fxt-nJ-V6f" firstAttribute="top" secondItem="5Tg-qv-ckW" secondAttribute="top" constant="21" id="pNp-SD-fWA"/>
+                                    <constraint firstAttribute="bottom" secondItem="0pn-US-SU2" secondAttribute="bottom" constant="6" id="XjV-BK-eq8"/>
+                                    <constraint firstAttribute="bottom" secondItem="fxt-nJ-V6f" secondAttribute="bottom" constant="6" id="aQD-nM-oT4"/>
+                                    <constraint firstItem="0pn-US-SU2" firstAttribute="top" secondItem="5Tg-qv-ckW" secondAttribute="top" constant="30" id="p32-YG-quF"/>
+                                    <constraint firstItem="fxt-nJ-V6f" firstAttribute="top" secondItem="5Tg-qv-ckW" secondAttribute="top" constant="31" id="pNp-SD-fWA"/>
                                     <constraint firstItem="0pn-US-SU2" firstAttribute="leading" secondItem="fxt-nJ-V6f" secondAttribute="trailing" constant="32" id="xbf-B0-vBN"/>
                                 </constraints>
                             </view>
@@ -3129,7 +3129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9sy-Rf-Aud" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9098" y="61"/>
+            <point key="canvasLocation" x="8460" y="98"/>
         </scene>
         <!--Pending LeavesVC-->
         <scene sceneID="oHS-Xh-T6B">
@@ -3143,7 +3143,7 @@
                                 <rect key="frame" x="0.0" y="-4" width="375" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending Leaves" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NF0-Gr-Xy4">
-                                        <rect key="frame" x="63" y="20" width="161" height="24"/>
+                                        <rect key="frame" x="63" y="30" width="161" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="161" id="H9s-jj-GXC"/>
                                             <constraint firstAttribute="height" constant="24" id="r0I-dS-4hd"/>
@@ -3153,7 +3153,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdb-76-Rkq">
-                                        <rect key="frame" x="17" y="21" width="14" height="23"/>
+                                        <rect key="frame" x="17" y="31" width="14" height="23"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="14" id="ol1-2X-Vxx"/>
                                             <constraint firstAttribute="height" constant="23" id="z0L-QH-G5J"/>
@@ -3166,16 +3166,16 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.054901960780000002" green="0.29803921570000003" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="pdb-76-Rkq" firstAttribute="top" secondItem="r4q-dC-Cmq" secondAttribute="top" constant="21" id="CTR-hP-4Nw"/>
-                                    <constraint firstAttribute="bottom" secondItem="pdb-76-Rkq" secondAttribute="bottom" constant="16" id="UdM-SX-eF8"/>
-                                    <constraint firstAttribute="bottom" secondItem="NF0-Gr-Xy4" secondAttribute="bottom" constant="16" id="fdh-v7-hit"/>
+                                    <constraint firstItem="pdb-76-Rkq" firstAttribute="top" secondItem="r4q-dC-Cmq" secondAttribute="top" constant="31" id="CTR-hP-4Nw"/>
+                                    <constraint firstAttribute="bottom" secondItem="pdb-76-Rkq" secondAttribute="bottom" constant="6" id="UdM-SX-eF8"/>
+                                    <constraint firstAttribute="bottom" secondItem="NF0-Gr-Xy4" secondAttribute="bottom" constant="6" id="fdh-v7-hit"/>
                                     <constraint firstItem="NF0-Gr-Xy4" firstAttribute="leading" secondItem="pdb-76-Rkq" secondAttribute="trailing" constant="32" id="iba-on-Aeq"/>
                                     <constraint firstItem="pdb-76-Rkq" firstAttribute="leading" secondItem="r4q-dC-Cmq" secondAttribute="leading" constant="17" id="pPc-p7-9J6"/>
-                                    <constraint firstItem="NF0-Gr-Xy4" firstAttribute="top" secondItem="r4q-dC-Cmq" secondAttribute="top" constant="20" id="wdH-gH-Dvx"/>
+                                    <constraint firstItem="NF0-Gr-Xy4" firstAttribute="top" secondItem="r4q-dC-Cmq" secondAttribute="top" constant="30" id="wdH-gH-Dvx"/>
                                     <constraint firstAttribute="height" constant="60" id="whA-KU-W8H"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="n4W-Nz-KwG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="n4W-Nz-KwG">
                                 <rect key="frame" x="0.0" y="64" width="375" height="583"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="separatorColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -5351,6 +5351,7 @@
                                         </constraints>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" red="0.83529411764705885" green="0.89411764705882346" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="aj2-HC-bzt" firstAttribute="top" secondItem="3dr-8k-IRt" secondAttribute="top" id="BcC-9f-YCi"/>
                                     <constraint firstAttribute="bottom" secondItem="bdp-rb-A2A" secondAttribute="bottom" id="IOa-DZ-AQC"/>
@@ -6671,7 +6672,7 @@
                                     <constraint firstItem="e7B-q2-IPl" firstAttribute="top" secondItem="fnC-I0-Ob0" secondAttribute="top" constant="19" id="wyi-3f-RUZ"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTj-e7-l0j">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTj-e7-l0j">
                                 <rect key="frame" x="82" y="541" width="250" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
