--- a/FaceTek/Manager/PendingHeadercell.xib
+++ b/FaceTek/Manager/PendingHeadercell.xib
@@ -10,91 +10,89 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PendingHeadercell" rowHeight="37" id="KGk-i7-Jjw" customClass="PendingHeadercell" customModule="Facetek" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="37"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PendingHeadercell" rowHeight="42" id="JNf-9I-ndj" customClass="PendingHeadercell" customModule="Facetek" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="37"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JNf-9I-ndj" id="4na-ds-Qal">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZlR-BK-Uq9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="38"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DWi-ui-AX2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaves1.png" translatesAutoresizingMaskIntoConstraints="NO" id="jd4-ve-9ZP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaves1.png" translatesAutoresizingMaskIntoConstraints="NO" id="csG-Jp-c8K">
                                 <rect key="frame" x="23" y="7" width="25" height="25"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="25" id="InS-Qj-dmP"/>
-                                    <constraint firstAttribute="height" constant="25" id="cZB-8d-3Ie"/>
+                                    <constraint firstAttribute="width" constant="25" id="KOY-ik-y6N"/>
+                                    <constraint firstAttribute="height" constant="25" id="mya-aF-pVt"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zy-g0-xWt">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyv-rd-6hA">
                                 <rect key="frame" x="58" y="9" width="140" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="OLd-Xm-WzR"/>
-                                    <constraint firstAttribute="width" constant="140" id="Xk0-os-cBI"/>
+                                    <constraint firstAttribute="width" constant="140" id="ZLg-si-5eJ"/>
+                                    <constraint firstAttribute="height" constant="21" id="yqe-ds-bRC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VPn-9y-3o2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dix-fV-T6b">
                                 <rect key="frame" x="206" y="8" width="53" height="17"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="6AT-Vf-VID"/>
-                                    <constraint firstAttribute="width" constant="53" id="mmR-2O-fRB"/>
+                                    <constraint firstAttribute="height" constant="17" id="1q8-9d-Gji"/>
+                                    <constraint firstAttribute="width" constant="53" id="36c-FT-jfa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UuA-z9-yUf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bf-Tw-7Wg">
                                 <rect key="frame" x="282" y="11" width="15" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="9EW-tp-LMN"/>
-                                    <constraint firstAttribute="width" constant="15" id="kIz-wn-wlf"/>
+                                    <constraint firstAttribute="width" constant="15" id="iUe-1B-JTw"/>
+                                    <constraint firstAttribute="height" constant="15" id="nnI-TY-v0L"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="LeavedownArrowimg.png"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Txf-xd-5mc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ct3-lL-70w">
                                 <rect key="frame" x="4" y="0.0" width="316" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="YQd-lN-Yz2"/>
-                                </constraints>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="VPn-9y-3o2" firstAttribute="top" secondItem="ZlR-BK-Uq9" secondAttribute="top" constant="8" id="2A5-LE-WcZ"/>
-                            <constraint firstItem="3zy-g0-xWt" firstAttribute="leading" secondItem="jd4-ve-9ZP" secondAttribute="trailing" constant="10" id="81T-Do-yrm"/>
-                            <constraint firstItem="Txf-xd-5mc" firstAttribute="top" secondItem="ZlR-BK-Uq9" secondAttribute="top" id="QVA-sH-3ME"/>
-                            <constraint firstItem="UuA-z9-yUf" firstAttribute="top" secondItem="ZlR-BK-Uq9" secondAttribute="top" constant="11" id="WcY-p6-LFW"/>
-                            <constraint firstAttribute="height" constant="38" id="XVZ-CM-Wni"/>
-                            <constraint firstItem="3zy-g0-xWt" firstAttribute="top" secondItem="ZlR-BK-Uq9" secondAttribute="top" constant="9" id="axR-h8-AYC"/>
-                            <constraint firstItem="VPn-9y-3o2" firstAttribute="leading" secondItem="3zy-g0-xWt" secondAttribute="trailing" constant="8" id="i7c-gL-QGK"/>
-                            <constraint firstItem="jd4-ve-9ZP" firstAttribute="top" secondItem="ZlR-BK-Uq9" secondAttribute="top" constant="7" id="iVe-dr-wOO"/>
-                            <constraint firstItem="Txf-xd-5mc" firstAttribute="leading" secondItem="ZlR-BK-Uq9" secondAttribute="leading" constant="4" id="kS5-yH-jiM"/>
-                            <constraint firstItem="jd4-ve-9ZP" firstAttribute="leading" secondItem="ZlR-BK-Uq9" secondAttribute="leading" constant="23" id="nKe-Je-sdD"/>
-                            <constraint firstAttribute="trailing" secondItem="Txf-xd-5mc" secondAttribute="trailing" id="tmS-nU-nU3"/>
-                            <constraint firstAttribute="trailing" secondItem="UuA-z9-yUf" secondAttribute="trailing" constant="23" id="zQ2-Rh-fPz"/>
+                            <constraint firstItem="0bf-Tw-7Wg" firstAttribute="top" secondItem="DWi-ui-AX2" secondAttribute="top" constant="11" id="2hW-G0-kRC"/>
+                            <constraint firstAttribute="trailing" secondItem="0bf-Tw-7Wg" secondAttribute="trailing" constant="23" id="4BB-qe-GeK"/>
+                            <constraint firstItem="csG-Jp-c8K" firstAttribute="top" secondItem="DWi-ui-AX2" secondAttribute="top" constant="7" id="I3h-NV-FP1"/>
+                            <constraint firstItem="csG-Jp-c8K" firstAttribute="leading" secondItem="DWi-ui-AX2" secondAttribute="leading" constant="23" id="Ij4-sA-fB8"/>
+                            <constraint firstAttribute="bottom" secondItem="ct3-lL-70w" secondAttribute="bottom" id="Jsp-b3-2hw"/>
+                            <constraint firstAttribute="trailing" secondItem="ct3-lL-70w" secondAttribute="trailing" id="TBW-1v-Cz4"/>
+                            <constraint firstItem="Dix-fV-T6b" firstAttribute="top" secondItem="DWi-ui-AX2" secondAttribute="top" constant="8" id="Ucj-FE-b2Q"/>
+                            <constraint firstItem="uyv-rd-6hA" firstAttribute="top" secondItem="DWi-ui-AX2" secondAttribute="top" constant="9" id="XK2-sR-Nd1"/>
+                            <constraint firstItem="ct3-lL-70w" firstAttribute="leading" secondItem="DWi-ui-AX2" secondAttribute="leading" constant="4" id="e2A-Bd-QaF"/>
+                            <constraint firstItem="ct3-lL-70w" firstAttribute="top" secondItem="DWi-ui-AX2" secondAttribute="top" id="rtR-96-dc5"/>
+                            <constraint firstItem="Dix-fV-T6b" firstAttribute="leading" secondItem="uyv-rd-6hA" secondAttribute="trailing" constant="8" id="sBn-Aa-IRU"/>
+                            <constraint firstItem="uyv-rd-6hA" firstAttribute="leading" secondItem="csG-Jp-c8K" secondAttribute="trailing" constant="10" id="v6f-f7-0aO"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="ZlR-BK-Uq9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="II4-mr-xpH"/>
-                    <constraint firstItem="ZlR-BK-Uq9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PeP-qO-Vh0"/>
-                    <constraint firstAttribute="trailing" secondItem="ZlR-BK-Uq9" secondAttribute="trailing" id="whp-R8-zg2"/>
+                    <constraint firstItem="DWi-ui-AX2" firstAttribute="leading" secondItem="4na-ds-Qal" secondAttribute="leading" id="Edq-yZ-Fgb"/>
+                    <constraint firstAttribute="trailing" secondItem="DWi-ui-AX2" secondAttribute="trailing" id="SOl-hv-EHO"/>
+                    <constraint firstItem="DWi-ui-AX2" firstAttribute="top" secondItem="4na-ds-Qal" secondAttribute="top" id="gca-ck-iUg"/>
+                    <constraint firstAttribute="bottom" secondItem="DWi-ui-AX2" secondAttribute="bottom" id="pp7-jO-LC9"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="sk2-rv-zdl"/>
             <connections>
-                <outlet property="Btnclk" destination="Txf-xd-5mc" id="QpA-F1-tvd"/>
-                <outlet property="CountLbl" destination="VPn-9y-3o2" id="fpD-5P-ISh"/>
-                <outlet property="empNameLbl" destination="3zy-g0-xWt" id="0Pm-I0-S3x"/>
-                <outlet property="img" destination="jd4-ve-9ZP" id="10P-di-gHE"/>
+                <outlet property="Btnclk" destination="ct3-lL-70w" id="LsL-7a-p1m"/>
+                <outlet property="CountLbl" destination="Dix-fV-T6b" id="oIa-wY-MwR"/>
+                <outlet property="empNameLbl" destination="uyv-rd-6hA" id="9Ym-KJ-TNb"/>
+                <outlet property="img" destination="csG-Jp-c8K" id="95f-0R-p0D"/>
             </connections>
-            <point key="canvasLocation" x="-36.231884057971016" y="25.111607142857142"/>
+            <point key="canvasLocation" x="-36.231884057971016" y="26.785714285714285"/>
         </tableViewCell>
     </objects>
     <resources>
