--- a/FaceTek/Manager/PendingLeavescellTableViewCell.xib
+++ b/FaceTek/Manager/PendingLeavescellTableViewCell.xib
@@ -31,13 +31,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAX-xk-XNV">
-                                <rect key="frame" x="18" y="29" width="48" height="21"/>
+                                <rect key="frame" x="18" y="34" width="48" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remarks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LcM-8p-Sou">
-                                <rect key="frame" x="18" y="50" width="56" height="17"/>
+                                <rect key="frame" x="18" y="60" width="56" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -53,14 +53,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O07-ZL-5zo">
-                                <rect key="frame" x="92" y="29" width="116" height="21"/>
+                                <rect key="frame" x="92" y="34" width="116" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FuM-MB-UrJ">
-                                <rect key="frame" x="92" y="50" width="116" height="21"/>
+                                <rect key="frame" x="92" y="60" width="116" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="116" id="0TE-dg-yPB"/>
                                     <constraint firstAttribute="height" constant="21" id="pFC-Aj-c9Q"/>
@@ -90,10 +90,10 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accept" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cp4-Va-jyU">
-                                        <rect key="frame" x="29" y="5" width="43" height="15"/>
+                                        <rect key="frame" x="25" y="5" width="50" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="15" id="Cm0-gq-RGF"/>
-                                            <constraint firstAttribute="width" constant="43" id="Xzi-RP-nT6"/>
+                                            <constraint firstAttribute="width" constant="50" id="Xzi-RP-nT6"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -107,7 +107,7 @@
                                     <constraint firstAttribute="width" constant="80" id="ba8-7a-yDD"/>
                                     <constraint firstAttribute="height" constant="25" id="k2g-H2-z6l"/>
                                     <constraint firstItem="30I-Ni-qNt" firstAttribute="leading" secondItem="YRu-re-aUb" secondAttribute="leading" constant="3" id="le6-cy-AFw"/>
-                                    <constraint firstItem="cp4-Va-jyU" firstAttribute="trailing" secondItem="YRu-re-aUb" secondAttribute="trailingMargin" id="whN-Hi-cVS"/>
+                                    <constraint firstItem="cp4-Va-jyU" firstAttribute="trailing" secondItem="YRu-re-aUb" secondAttribute="trailingMargin" constant="3" id="whN-Hi-cVS"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZE-Mp-XZW">
@@ -151,24 +151,24 @@
                             <constraint firstItem="4xC-7o-NNA" firstAttribute="top" secondItem="uMu-3O-WlJ" secondAttribute="top" constant="9" id="1km-vZ-rVp"/>
                             <constraint firstAttribute="trailing" secondItem="YRu-re-aUb" secondAttribute="trailing" constant="6" id="1sv-WD-fjj"/>
                             <constraint firstAttribute="trailing" secondItem="4xC-7o-NNA" secondAttribute="trailing" constant="6" id="5D8-ut-bxN"/>
-                            <constraint firstAttribute="bottom" secondItem="tAX-xk-XNV" secondAttribute="bottom" constant="80" id="73l-yX-McI"/>
+                            <constraint firstAttribute="bottom" secondItem="tAX-xk-XNV" secondAttribute="bottom" constant="75" id="73l-yX-McI"/>
                             <constraint firstAttribute="width" constant="341" id="DiF-Es-Z7x"/>
                             <constraint firstItem="2Nx-yB-E7P" firstAttribute="leading" secondItem="uMu-3O-WlJ" secondAttribute="leading" constant="18" id="Hi8-EN-uUP"/>
                             <constraint firstAttribute="bottom" secondItem="YRu-re-aUb" secondAttribute="bottom" constant="7" id="MXa-7R-hMI"/>
                             <constraint firstItem="4xC-7o-NNA" firstAttribute="leading" secondItem="zOX-Qr-dj8" secondAttribute="trailing" constant="20" id="NTW-QB-wNi"/>
                             <constraint firstItem="FuM-MB-UrJ" firstAttribute="leading" secondItem="LcM-8p-Sou" secondAttribute="trailing" constant="18" id="Q68-GQ-9gE"/>
                             <constraint firstItem="YRu-re-aUb" firstAttribute="leading" secondItem="hZE-Mp-XZW" secondAttribute="trailing" constant="6" id="RiX-8I-jdy"/>
-                            <constraint firstItem="hZE-Mp-XZW" firstAttribute="top" secondItem="FuM-MB-UrJ" secondAttribute="bottom" constant="27" id="U75-li-TMA"/>
+                            <constraint firstItem="hZE-Mp-XZW" firstAttribute="top" secondItem="FuM-MB-UrJ" secondAttribute="bottom" constant="17" id="U75-li-TMA"/>
                             <constraint firstItem="YRu-re-aUb" firstAttribute="top" secondItem="4xC-7o-NNA" secondAttribute="bottom" constant="72" id="Uza-hi-mDe"/>
                             <constraint firstItem="zOX-Qr-dj8" firstAttribute="top" secondItem="uMu-3O-WlJ" secondAttribute="top" constant="9" id="bIJ-J8-jkq"/>
                             <constraint firstAttribute="bottom" secondItem="hZE-Mp-XZW" secondAttribute="bottom" constant="7" id="d0H-hk-zWa"/>
                             <constraint firstAttribute="height" constant="130" id="drb-a7-qKo"/>
                             <constraint firstAttribute="bottom" secondItem="2Nx-yB-E7P" secondAttribute="bottom" constant="100" id="gUO-eT-sWA"/>
-                            <constraint firstItem="tAX-xk-XNV" firstAttribute="top" secondItem="uMu-3O-WlJ" secondAttribute="top" constant="29" id="lkw-4f-qZ9"/>
-                            <constraint firstAttribute="bottom" secondItem="LcM-8p-Sou" secondAttribute="bottom" constant="63" id="mgQ-UW-9as"/>
+                            <constraint firstItem="tAX-xk-XNV" firstAttribute="top" secondItem="uMu-3O-WlJ" secondAttribute="top" constant="34" id="lkw-4f-qZ9"/>
+                            <constraint firstAttribute="bottom" secondItem="LcM-8p-Sou" secondAttribute="bottom" constant="53" id="mgQ-UW-9as"/>
                             <constraint firstItem="tAX-xk-XNV" firstAttribute="leading" secondItem="uMu-3O-WlJ" secondAttribute="leading" constant="18" id="pha-Eq-9Ub"/>
                             <constraint firstItem="2Nx-yB-E7P" firstAttribute="top" secondItem="uMu-3O-WlJ" secondAttribute="top" constant="9" id="vi6-TU-eRg"/>
-                            <constraint firstAttribute="bottom" secondItem="FuM-MB-UrJ" secondAttribute="bottom" constant="59" id="xLk-tC-E7T"/>
+                            <constraint firstAttribute="bottom" secondItem="FuM-MB-UrJ" secondAttribute="bottom" constant="49" id="xLk-tC-E7T"/>
                             <constraint firstItem="zOX-Qr-dj8" firstAttribute="leading" secondItem="2Nx-yB-E7P" secondAttribute="trailing" constant="-7" id="xyM-oA-Ljq"/>
                         </constraints>
                     </view>
@@ -184,10 +184,13 @@
             <connections>
                 <outlet property="AcceptLbl" destination="cp4-Va-jyU" id="S1i-Lb-Ygv"/>
                 <outlet property="FromLbl" destination="zOX-Qr-dj8" id="Hd2-Bp-I8y"/>
+                <outlet property="FromtxtLbl" destination="2Nx-yB-E7P" id="OfM-WI-n2v"/>
                 <outlet property="LeaveTypeLbl" destination="4xC-7o-NNA" id="h4U-pU-xCE"/>
                 <outlet property="RejctLbl" destination="9uu-7k-aCr" id="uim-S5-RXi"/>
                 <outlet property="RemarksLbl" destination="FuM-MB-UrJ" id="oEm-zC-Riz"/>
+                <outlet property="RemarkstxtLbl" destination="LcM-8p-Sou" id="W1M-lo-4OO"/>
                 <outlet property="ToLbl" destination="O07-ZL-5zo" id="8gr-T6-jzF"/>
+                <outlet property="TotxtLbl" destination="tAX-xk-XNV" id="3PI-EJ-Dih"/>
             </connections>
             <point key="canvasLocation" x="169.56521739130437" y="127.56696428571428"/>
         </tableViewCell>
