--- a/FaceTek/Leave/LeaveNavigationcell.xib
+++ b/FaceTek/Leave/LeaveNavigationcell.xib
@@ -17,14 +17,21 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="  Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-Et-afK">
-                        <rect key="frame" x="54" y="12" width="227" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-Et-afK">
+                        <rect key="frame" x="9" y="12" width="227" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="LxI-il-kYt"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="xWw-Et-afK" secondAttribute="trailing" constant="84" id="Fhs-Iw-LlO"/>
+                    <constraint firstItem="xWw-Et-afK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="MQQ-fz-LP1"/>
+                    <constraint firstItem="xWw-Et-afK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="qFc-bH-kgV"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
