--- a/FaceTek/Leave/LeaveNavigationcell.xib
+++ b/FaceTek/Leave/LeaveNavigationcell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-Et-afK">
-                        <rect key="frame" x="9" y="12" width="227" height="21"/>
+                        <rect key="frame" x="9" y="12" width="290" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="LxI-il-kYt"/>
                         </constraints>
@@ -28,7 +28,7 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="xWw-Et-afK" secondAttribute="trailing" constant="84" id="Fhs-Iw-LlO"/>
+                    <constraint firstAttribute="trailing" secondItem="xWw-Et-afK" secondAttribute="trailing" constant="21" id="Fhs-Iw-LlO"/>
                     <constraint firstItem="xWw-Et-afK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="MQQ-fz-LP1"/>
                     <constraint firstItem="xWw-Et-afK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="qFc-bH-kgV"/>
                 </constraints>
@@ -37,7 +37,7 @@
             <connections>
                 <outlet property="LeaveNavigationLbl" destination="xWw-Et-afK" id="P4L-uz-4Nk"/>
             </connections>
-            <point key="canvasLocation" x="52.799999999999997" y="48.575712143928037"/>
+            <point key="canvasLocation" x="-363" y="37"/>
         </tableViewCell>
     </objects>
 </document>
